tests/baselines/reference/unionTypeErrorMessageTypeRefs01.errors.txt
tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts(25,1): error TS2322: Type 'A<Foo>' is not assignable to type 'A<Bar> | B<Baz> | C<Kwah>'.
  Type 'A<Foo>' is not assignable to type 'A<Bar>'.
    Property 'bar' is missing in type 'Foo' but required in type 'Bar'.
tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts(26,1): error TS2322: Type 'B<Foo>' is not assignable to type 'A<Bar> | B<Baz> | C<Kwah>'.
  Type 'B<Foo>' is not assignable to type 'B<Baz>'.
    Property 'baz' is missing in type 'Foo' but required in type 'Baz'.
tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts(27,1): error TS2322: Type 'C<Foo>' is not assignable to type 'A<Bar> | B<Baz> | C<Kwah>'.
  Type 'C<Foo>' is not assignable to type 'C<Kwah>'.
    Property 'kwah' is missing in type 'Foo' but required in type 'Kwah'.
tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts(48,1): error TS2322: Type 'X<Foo>' is not assignable to type 'X<Bar> | Y<Baz> | Z<Kwah>'.
  Type 'X<Foo>' is not assignable to type 'X<Bar>'.
    Type 'Foo' is not assignable to type 'Bar'.
tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts(49,1): error TS2322: Type 'Y<Foo>' is not assignable to type 'X<Bar> | Y<Baz> | Z<Kwah>'.
  Type 'Y<Foo>' is not assignable to type 'Y<Baz>'.
    Type 'Foo' is not assignable to type 'Baz'.
tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts(50,1): error TS2322: Type 'Z<Foo>' is not assignable to type 'X<Bar> | Y<Baz> | Z<Kwah>'.
  Type 'Z<Foo>' is not assignable to type 'Z<Kwah>'.
    Type 'Foo' is not assignable to type 'Kwah'.


==== tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts (6 errors) ====
    interface Foo { foo: any }
    interface Bar { bar: any }
    interface Baz { baz: any }
    interface Kwah { kwah: any }
    
    ////////
    
    interface A<T> {
        aProp: T;
    }
    
    interface B<T> {
        bProp: T;
    }
    
    interface C<T> {
        cProp: T;
    }
    
    declare const a: A<Foo>;
    declare const b: B<Foo>;
    declare const c: C<Foo>;
    declare let thingOfInterfaces: A<Bar> | B<Baz> | C<Kwah>;
    
    thingOfInterfaces = a;
    ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|A|0|}<{|Foo|1|}>' is not assignable to type '{|A|2|}<{|Bar|3|}> | {|B|4|}<{|Baz|5|}> | {|C|6|}<{|Kwah|7|}>'.
!!! error TS2322:   Type '{|A|8|}<{|Foo|9|}>' is not assignable to type '{|A|10|}<{|Bar|11|}>'.
!!! error TS2322:     Property 'bar' is missing in type '{|Foo|12|}' but required in type '{|Bar|13|}'.
!!! related TS2728 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:17: 'bar' is declared here.
!!! annotated symbol 0 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:8:11
!!! annotated symbol 1 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:8:11
!!! annotated symbol 3 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 4 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:12:11
!!! annotated symbol 5 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 6 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:16:11
!!! annotated symbol 7 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 8 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:8:11
!!! annotated symbol 9 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 10 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:8:11
!!! annotated symbol 11 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 12 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 13 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
    thingOfInterfaces = b;
    ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|B|0|}<{|Foo|1|}>' is not assignable to type '{|A|2|}<{|Bar|3|}> | {|B|4|}<{|Baz|5|}> | {|C|6|}<{|Kwah|7|}>'.
!!! error TS2322:   Type '{|B|8|}<{|Foo|9|}>' is not assignable to type '{|B|10|}<{|Baz|11|}>'.
!!! error TS2322:     Property 'baz' is missing in type '{|Foo|12|}' but required in type '{|Baz|13|}'.
!!! related TS2728 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:17: 'baz' is declared here.
!!! annotated symbol 0 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:12:11
!!! annotated symbol 1 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:8:11
!!! annotated symbol 3 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 4 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:12:11
!!! annotated symbol 5 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 6 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:16:11
!!! annotated symbol 7 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 8 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:12:11
!!! annotated symbol 9 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 10 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:12:11
!!! annotated symbol 11 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 12 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 13 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
    thingOfInterfaces = c;
    ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|C|0|}<{|Foo|1|}>' is not assignable to type '{|A|2|}<{|Bar|3|}> | {|B|4|}<{|Baz|5|}> | {|C|6|}<{|Kwah|7|}>'.
!!! error TS2322:   Type '{|C|8|}<{|Foo|9|}>' is not assignable to type '{|C|10|}<{|Kwah|11|}>'.
!!! error TS2322:     Property 'kwah' is missing in type '{|Foo|12|}' but required in type '{|Kwah|13|}'.
!!! related TS2728 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:18: 'kwah' is declared here.
!!! annotated symbol 0 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:16:11
!!! annotated symbol 1 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:8:11
!!! annotated symbol 3 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 4 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:12:11
!!! annotated symbol 5 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 6 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:16:11
!!! annotated symbol 7 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 8 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:16:11
!!! annotated symbol 9 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 10 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:16:11
!!! annotated symbol 11 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 12 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 13 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
    
    ////////
    
    type X<T> = {
        xProp: T;
    }
    
    type Y<T> = {
        yProp: T;
    }
    
    type Z<T> = {
        zProp: T;
    }
    
    declare const x: X<Foo>;
    declare const y: Y<Foo>;
    declare const z: Z<Foo>;
    declare let thingOfTypeAliases: X<Bar> | Y<Baz> | Z<Kwah>;
    
    thingOfTypeAliases = x;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|X|0|}<{|Foo|1|}>' is not assignable to type '{|X|2|}<{|Bar|3|}> | {|Y|4|}<{|Baz|5|}> | {|Z|6|}<{|Kwah|7|}>'.
!!! error TS2322:   Type '{|X|8|}<{|Foo|9|}>' is not assignable to type '{|X|10|}<{|Bar|11|}>'.
!!! error TS2322:     Type '{|Foo|12|}' is not assignable to type '{|Bar|13|}'.
!!! annotated symbol 0 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:31:6
!!! annotated symbol 1 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:31:6
!!! annotated symbol 3 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 4 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:35:6
!!! annotated symbol 5 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 6 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:39:6
!!! annotated symbol 7 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 8 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:31:6
!!! annotated symbol 9 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 10 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:31:6
!!! annotated symbol 11 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 12 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 13 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
    thingOfTypeAliases = y;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|Y|0|}<{|Foo|1|}>' is not assignable to type '{|X|2|}<{|Bar|3|}> | {|Y|4|}<{|Baz|5|}> | {|Z|6|}<{|Kwah|7|}>'.
!!! error TS2322:   Type '{|Y|8|}<{|Foo|9|}>' is not assignable to type '{|Y|10|}<{|Baz|11|}>'.
!!! error TS2322:     Type '{|Foo|12|}' is not assignable to type '{|Baz|13|}'.
!!! annotated symbol 0 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:35:6
!!! annotated symbol 1 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:31:6
!!! annotated symbol 3 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 4 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:35:6
!!! annotated symbol 5 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 6 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:39:6
!!! annotated symbol 7 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 8 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:35:6
!!! annotated symbol 9 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 10 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:35:6
!!! annotated symbol 11 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 12 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 13 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
    thingOfTypeAliases = z;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|Z|0|}<{|Foo|1|}>' is not assignable to type '{|X|2|}<{|Bar|3|}> | {|Y|4|}<{|Baz|5|}> | {|Z|6|}<{|Kwah|7|}>'.
!!! error TS2322:   Type '{|Z|8|}<{|Foo|9|}>' is not assignable to type '{|Z|10|}<{|Kwah|11|}>'.
!!! error TS2322:     Type '{|Foo|12|}' is not assignable to type '{|Kwah|13|}'.
!!! annotated symbol 0 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:39:6
!!! annotated symbol 1 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:31:6
!!! annotated symbol 3 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:2:11
!!! annotated symbol 4 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:35:6
!!! annotated symbol 5 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:3:11
!!! annotated symbol 6 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:39:6
!!! annotated symbol 7 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 8 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:39:6
!!! annotated symbol 9 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 10 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:39:6
!!! annotated symbol 11 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11
!!! annotated symbol 12 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:1:11
!!! annotated symbol 13 tests/cases/compiler/unionTypeErrorMessageTypeRefs01.ts:4:11